# ghanima-firmware

./: .gitignore  Cargo.toml  Justfile  README.md  build.rs  flash.sh  ghanima.json  justfile  requirements.txt
.cargo/: config
config/: .gitignore  Cargo.toml
config/src/: custom.rs  format.rs  layers.rs  leds.rs  lib.rs  mouse.rs
examples/: mouse_speed_profile.rs
ghanima-config/: Cargo.toml
ghanima-config/src/: custom.rs  format.rs  layers.rs  leds.rs  lib.rs  mouse.rs
remote/: gdbinit  gdbinit-postmortem  openocd.cfg  openocd_gdb_pipe.cfg
renode/: ghanima.resc  my_stm32f072.repl
src/: board.rs  config.rs  half2half.rs  joystick.rs  layers.rs  lib.rs  main.rs  protocol.rs  reboot.rs  spi.rs  usb.rs  utils.rs  ws2812b.rs
src/bsp/: debug.rs  joystick.rs  mod.rs  sides.rs  usb.rs  ws2812b.rs
src/bsp/debug/: counters.rs  mem.rs  mod.rs  pins.rs  tasks.rs
src/hal_ext/: checksum.rs  circ_buf.rs  crc.rs  dma.rs  mod.rs  reboot.rs  spi.rs  uart.rs  watchdog.rs
src/half2half/: fsm.rs  mod.rs  negotiation.rs  packet.rs  receiver.rs  sender.rs  transmitter.rs
src/ioqueue/: mod.rs  packet.rs  receiver.rs  transmitter.rs
src/keyboard/: actions.rs  event.rs  fsm.rs  hid.rs  keys.rs  mod.rs  mouse.rs  msg.rs  role.rs
src/keyboard/hid/: consumer.rs  keyboard.rs  mod.rs  mouse.rs
src/keyboard/leds/: bitset.rs  condition.rs  mod.rs  output.rs  pattern.rs
src/keyboard/mouse/: mod.rs
utils/: check-pkg-version  compare-elf-sizes  dissassemble  flash  flash.sh  gdb  install-hooks  lsusb-keyboards  open-docs  option-bytes  pre-push-hook  product-init  run-checks  size-reports-per-commit  tasks-execution  tasks_execution.py  type-sizes  unlock-flash  ws2812_spi.py
utils/sigrok-decoders/: README.md
utils/sigrok-decoders/tasks-timing/: __init__.py  pd.py
utils/type_sizes/: index.js  style.css
utils/type_sizes/templates/: index.jinja2.html
