[package]
name = "ghanima"
version = "0.1.0"
authors = ["Jędrzej Boczar <jedrzej.boczar@gmail.com>"]
edition = "2021"

[features]
default = []
idle_sleep = []
crystal = []

[[bin]]
name = "ghanima"
test = false
bench = false

[profile.dev]
opt-level = 2

[profile.release]
debug = true  # symbols don't increase the size on flash
lto = true

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.0"
stm32f0 = "0.14"
stm32f0xx-hal = { version = "0.18", features = ["stm32f072", "stm32-usbd"] }
systick-monotonic = "1.0"

nb = "1.0"
embedded-hal = "0.2"
embedded-dma = "0.1"

usb-device = "0.2"
usbd-hid = "0.5"
usbd-dfu-rt = "0.1"
# usbd-serial = "0.1"
usbd-serial = { git = "https://github.com/TDHolmes/usbd-serial.git", rev = "35d53d74d39ec521cba64577e26075b103ff83bc" }

# TODO: use official version when 0.2 is released
keyberon = { git = "https://github.com/TeXitoi/keyberon.git", rev = "58ac73cfcd09659bf31ee405ff9f5e23b0edc527" }

static_assertions = "1.1"
generic-array = "0.14"
# fixed = "1.11"
bitfield = "0.13"
heapless = "0.7"
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = "0.7"
rgb = "0.8"

panic-probe = "0.3"
defmt = "0.3"
defmt-rtt = "0.3"
micromath = "2.0"

[dev-dependencies]
assert_float_eq = "1.1"
