[package]
name = "ghanima"
version = "0.1.0"
authors = ["Jędrzej Boczar <jedrzej.boczar@gmail.com>"]
edition = "2021"

[features]
default = ["idle_sleep"]
idle_sleep = []
crystal = []
debug_tasks = []

[[bin]]
name = "ghanima"
test = false
bench = false

[profile.test]
# running tests on host, so prioritize fast build time
opt-level = 0
debug = 2
incremental = true
debug-assertions = true
overflow-checks = true
lto = false

[profile.dev]
opt-level = "s"
lto = "fat"  # won't fit in flash without fat lto
debug = 2
incremental = false
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = "s"
lto = "fat"
debug = 2  # symbols don't increase the size on flash
incremental = false
debug-assertions = false
overflow-checks = false

# Compiler sometimes hangs when using "s" with "fixed" (https://gitlab.com/tspiteri/fixed/-/issues/45)
[profile.release.package.fixed]
opt-level = 3
[profile.dev.package.fixed]
opt-level = 3

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.0"
stm32f0 = "0.14"
stm32f0xx-hal = { version = "0.18", features = ["stm32f072", "stm32-usbd"] }
systick-monotonic = "1.0"

nb = "1.0"
embedded-hal = "0.2"
embedded-dma = "0.2"

usb-device = "0.2"
usbd-hid = "0.5"
usbd-dfu-rt = "0.1"

# TODO: use official version when 0.2 is released
keyberon = { path = "./keyberon/" }

static_assertions = "1.1"
generic-array = "0.14"
fixed = "1.13"
bitfield = "0.13"
heapless = "0.7"
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = "0.7.3"
postcard-cobs = { version = "0.2", default-features = false }
num = { version = "0.4", default-features = false }
rgb = "0.8"
smlang = "0.5"
ringbuffer = { version = "0.8", default-features = false }
either = { version = "1.6", default-features = false }

panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3"
defmt-rtt = "0.3"
micromath = "2.0"

[dev-dependencies]
assert_float_eq = "1.1"
crc = "2.1"
