[package]
name = "ghanima"
version = "0.3.0"
authors = ["Jędrzej Boczar <jedrzej.boczar@gmail.com>"]
edition = "2021"

[features]
default = ["idle-sleep", "watchdog"]
idle-sleep = []
crystal = []
debug-tasks = []
task-counters = []
json-config = []
watchdog = []

[[bin]]
name = "ghanima"
test = false
bench = false

[profile.test]
# running tests on host, so prioritize fast build time
opt-level = 0
debug = 2
incremental = true
debug-assertions = true
overflow-checks = true
lto = false

[profile.dev]
opt-level = "s"
lto = "fat"  # won't fit in flash without fat lto
debug = 2
incremental = false
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = "s"
lto = "fat"
debug = 2  # symbols don't increase the size on flash
incremental = false
debug-assertions = false
overflow-checks = false

# Compiler sometimes hangs when using "s" with "fixed" (https://gitlab.com/tspiteri/fixed/-/issues/45)
[profile.release.package.fixed]
opt-level = 3
[profile.dev.package.fixed]
opt-level = 3

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
# cortex-m-rtic = "1.0"
cortex-m-rtic = { git = "https://github.com/rtic-rs/cortex-m-rtic.git", rev = "c6231d81" }
stm32f0xx-hal = { version = "0.18", features = ["stm32f072", "rt", "stm32-usbd"] }
systick-monotonic = "1.0"

nb = "1.0"
embedded-hal = "0.2"
embedded-dma = "0.2"

usb-device = "0.2"
usbd-human-interface-device = "0.3"
usbd-dfu-rt = "0.2"

# TODO: use official version when 0.2 is released
keyberon = { git = "https://github.com/TeXitoi/keyberon", rev = "29e960e" }

static_assertions = "1.1"
generic-array = "0.14"
fixed = "1.13"
bitfield = "0.14"
heapless = "0.7"
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = "1.0.1"
cobs = { version = "0.2", default-features = false }
num = { version = "0.4", default-features = false }
rgb = "0.8"
smlang = "0.6"
ringbuffer = { version = "0.10", default-features = false }
either = { version = "1.6", default-features = false }
pkg-version = "1.0"
frunk = { version = "0.4", default-features = false }
packed_struct = { version = "0.10", default-features = false }

# Do not use print-defmt as it blows up binary size - we can live without panic messages
panic-probe = "0.3"
defmt = "0.3"
defmt-rtt = "0.4"
micromath = "2.0"

[patch.crates-io]
stm32-usbd = { git = "https://github.com/jedrzejboczar/stm32-usbd", rev = "c6f7d12" }
usbd-human-interface-device = { git = "https://github.com/jedrzejboczar/usbd-human-interface-device", rev = "d0acf48" }

[dev-dependencies]
assert_float_eq = "1.1"
crc = "3.0"
gnuplot = "0.0.37"

[build-dependencies]
ghanima-config = { path = "./config" }
anyhow = "1.0"
