[package]
name = "ghanima-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = "1"
prettyplease = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

anyhow = "1.0"

[dev-dependencies]
similar-asserts = "1.2"
