[package]
name = "ghanima-config"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
prettyplease = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

anyhow = "1.0"

[dev-dependencies]
similar-asserts = "1.2"
